--- a/raml-to-jaxrs/core/pom.xml
+++ b/raml-to-jaxrs/core/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>raml-jaxrs-codegen-core</artifactId>
     <packaging>jar</packaging>
     <name>RAML JAX-RS Codegen Core</name>
-<version>1.3.4</version>
+    <version>1.3.4-ns-SNAPSHOT</version>
 
     <properties>
         <licensePath>../LICENSE_HEADER.txt</licensePath>
@@ -62,14 +62,20 @@
         </execution>
       </executions>
     </plugin>
-    
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+            <skipTests>true</skipTests>
+        </configuration>
+    </plugin>
 </plugins>
 </build>
     <dependencies>
         <dependency>
             <groupId>org.raml</groupId>
             <artifactId>raml-parser</artifactId>
-            <version>0.8.12</version>            
+            <version>0.8.12-ns-SNAPSHOT</version>
         </dependency>
 
         <dependency>
