--- a/raml-to-jaxrs/maven-plugin/pom.xml
+++ b/raml-to-jaxrs/maven-plugin/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>org.raml.plugins</groupId>
 	<artifactId>raml-jaxrs-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
+	<version>1.3.4-ns-SNAPSHOT</version>
 	<name>RAML JAX-RS Maven Plug-in</name>
 
 	<properties>
