--- a/raml-to-jaxrs/pom.xml
+++ b/raml-to-jaxrs/pom.xml
@@ -11,20 +11,30 @@
         <module>maven-plugin</module>
         <module>gradle-plugin</module>
     </modules>
- <distributionManagement>
-       <repository>
-            <id>mule-ee-releases</id>
-            <name>Mule Release Repository</name>                                               
-            <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases</url>
+ <!--<distributionManagement>-->
+       <!--<repository>-->
+            <!--<id>mule-ee-releases</id>-->
+            <!--<name>Mule Release Repository</name>                                               -->
+            <!--<url>https://repository-master.mulesoft.org/nexus/content/repositories/releases</url>-->
+        <!--</repository>-->
+        <!--<snapshotRepository>-->
+            <!--<id>mule-snapshots</id>-->
+            <!--<name>Mule Snapshot Repository</name>-->
+            <!--<url>https://repository-master.mulesoft.org/nexus/content/repositories/snapshots/</url>-->
+            <!--<uniqueVersion>false</uniqueVersion>-->
+        <!--</snapshotRepository>-->
+
+  <!--</distributionManagement>-->
+    <distributionManagement>
+        <repository>
+            <id>nexus-releases</id>
+            <url>http://devops.lashou-inc.com:8081/content/repositories/thirdparty</url>
         </repository>
         <snapshotRepository>
-            <id>mule-snapshots</id>
-            <name>Mule Snapshot Repository</name>
-            <url>https://repository-master.mulesoft.org/nexus/content/repositories/snapshots/</url>
-            <uniqueVersion>false</uniqueVersion>
+            <id>nexus-snapshots</id>
+            <url>http://devops.lashou-inc.com:8081/content/repositories/snapshots</url>
         </snapshotRepository>
-
-  </distributionManagement>
+    </distributionManagement>
 <profiles>
     <profile>
         <id>sonatype</id>
