--- a/raml-to-jaxrs/maven-plugin/pom.xml
+++ b/raml-to-jaxrs/maven-plugin/pom.xml
@@ -21,6 +21,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.mongodb.morphia</groupId>
+			<artifactId>morphia</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.raml</groupId>
 			<artifactId>raml-jaxrs-codegen-core</artifactId>
 			<version>${project.version}</version>
